k8s/apps/django-k8s-user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-user-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: service-user-deployment
  template:
    metadata:
      labels:
        app: service-user-deployment
    spec:
      containers:
        - name: service-user
          image: registry.digitalocean.com/rso-vaje/service-user:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
      imagePullSecrets:
        - name: registry-rso-vaje

---

apiVersion: v1
kind: Service
metadata:
  name: service-user-service
spec:
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
  selector:
    app: service-user-deployment
