k8s/apps/django-k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-frontend-service
                port:
                  number: 80
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: service-user-service
                port:
                  number: 8000
          - path: /api/books
            pathType: Prefix
            backend:
              service:
                name: service-book-service
                port:
                  number: 8001
          - path: /api/borrows
            pathType: Prefix
            backend:
              service:
                name: service-borrow-service
                port:
                  number: 8002
